# aws-codeseeder

./: pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: main.yml
example/: requirements.txt
